RESOLVED FIXED80458
REGRESSION(r96566): Cursor is I-beam upon dragging an attachment in mail
https://bugs.webkit.org/show_bug.cgi?id=80458
Summary REGRESSION(r96566): Cursor is I-beam upon dragging an attachment in mail
Adele Peterson
Reported 2012-03-06 17:25:40 PST
REGRESSION(r96566): Cursor is I-beam upon dragging an attachment in mail
Attachments
patch (1.96 KB, patch)
2012-03-06 17:34 PST, Adele Peterson
mitz: review+
Adele Peterson
Comment 1 2012-03-06 17:26:06 PST
Adele Peterson
Comment 2 2012-03-06 17:34:00 PST
Adele Peterson
Comment 3 2012-03-07 09:24:37 PST
Committed revision 110063.
Konrad Piascik
Comment 4 2012-03-19 13:02:24 PDT
> Source/WebCore/page/EventHandler.cpp:1289 > + if (m_mousePressed && m_mouseDownMayStartSelect && !m_mouseDownMayStartDrag && m_frame->selection()->isCaretOrRange() && !m_capturingMouseEventsNode) This breaks ports that don't have DRAG_SUPPORT enabled since m_mouseDownMayStartDrag is declared behind the #if ENABLE(DRAG_SUPPORT) flag.
Note You need to log in before you can comment on or make changes to this bug.