REGRESSION(r96566): Cursor is I-beam upon dragging an attachment in mail https://bugs.webkit.org/show_bug.cgi?id=80458 <rdar://problem/10873195>

Reviewed by Dan Bernstein.

No tests because we currently don't have any test machinery for cursors.

Make sure the shortcut to always use an iBeam cursor during selection isn't used during dragging.
Before r96566, we handled plugin cursors as a special case before calling into selectCursor, so we never hit this code path.

* page/EventHandler.cpp: (WebCore::EventHandler::selectCursor):



Canonical link: https://commits.webkit.org/97680@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110063 268f45cc-cd09-0410-ab3c-d52691b4dbfc